Version 3.3 (2010-xx-xx)
	Fixed bug where backspace on a table on IE would produce an empty tbody and some JS exceptions.
Version 3.3rc1 (2010-02-23)
	Fixed bug with new legacyoutput plugin not working correctly on it's own.
	Fixed bug some performance issues with removing text formats.
	Fixed bug where TinyMCE specific attributes wasn't removed properly by remove format.
	Fixed bug where it wasn't possible to align images within inline elements.
	Fixed bug where Ctrl+Delete/Backspace would produce an invalid argument exception on IE.
	Fixed bug where the search/replace logic could produce an infinite loop on IE for reverse searches.
	Fixed bug where cloning formats in cells didn't work properly on IE.
	Fixed bug where IE6 would produce a horizontal scroll bar.
	Fixed so remove jQuery method removes the TinyMCE instance as well as the specified textarea.
	Fixed so selected rows and cells gets updated using the row/cell properties dialogs.
Version 3.3b2 (2010-02-04)
	Fixed bug where sometimes img elements would be removed by split method in DOMUtils.
	Fixed bug where merging of span elements could occur on bookmark nodes.
	Fixed bug where classes wasn't properly removed when removeformat was used on IE 6.
	Fixed bug where multiple calls to an tinyMCE.init with mode set to exact could produce the same unique ID.
	Fixed bug with the IE selection implementation when it was feeded an document range.
	Fixed bug where block elements formatting wasn't properly removed by removeformat on all browsers.
	Fixed bug where selection location was lost if you performed a manual cleanup.
	Fixed bug where removeformat wouldn't remove span elements within styled block elements.
	Fixed bug where an error would be thrown if you clicked on the separator lines in menus.
	Fixed bug with the jQuery plugin adding always adding a querystring value to other resources.
	Fixed bug where IE would produce an error message if you had an empty editor instance.